[gd_scene load_steps=5 format=3 uid="uid://df3lh0vw86k6j"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_oyixv"]
[ext_resource type="Texture2D" uid="uid://cit6bphhsg26y" path="res://icon.svg" id="2_purij"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cxfgg"]
radius = 28.1603

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h3ska"]
size = Vector2(95, 96)

[node name="Player" type="Node2D"]
script = ExtResource("1_oyixv")

[node name="Icon" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_purij")

[node name="DialogueCollider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueCollider"]
position = Vector2(0, -83)
shape = SubResource("CircleShape2D_cxfgg")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_h3ska")

[connection signal="area_entered" from="DialogueCollider" to="." method="sensor_enter"]
[connection signal="area_exited" from="DialogueCollider" to="." method="sensor_exit"]
